test/files/neg/macro-invalidshape-b/Macros_Test_2.scala
object Macros {
  def foo(x: Any) = macro Impls.foo(null)(null)
}

object Test extends App {
  import Macros._
  foo(42)
}